assets/main.scss
---
---

@import "minima";

body {
    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #383838;
}

/* CV grid layout */
.cv {
  display: grid;
  grid-template-columns: 15% 85%;
  row-gap: 8px;
}

/* Left column (years) */
.year {
  text-align: right;
  padding-right: 10px;
}

/* Right column (content) */
.content {

}

.gallery {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

